--- a/index.html
+++ b/index.html
@@ -8,33 +8,146 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="coba.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div>
-      <img src="image.jpg" alt="" />
-      <div class="header-navigation">
-        <div class="header">
-          <p>Kontak Person <a href="tel:+6285330207559">085330207559</a></p>
-          <div class="sosmed">
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-facebook"></i>
-            <i class="fab fa-tiktok"></i>
-            <i class="fab fa-youtube"></i>
-          </div>
+    <header>
+      <p>Yuliatin Ningsih</p>
+      <nav>
+        <a href="">Home</a>
+        <a href="">Experience & Education</a>
+        <a href="">Portfolio</a>
+        <a href="">Writing</a>
+        <a href="">Speaking</a>
+      </nav>
+    </header>
+    <div class="hero-image">
+      <div class="image">
+        <img src="Untitled.png" alt="" />
+      </div>
+      <div class="profil-me">
+        <div class="profil">
+          <p>Hi, I'm Luky.</p>
+          <p>I'm a Design Lead</p>
+          <p>based in Berlin.</p>
         </div>
-        <div class="navigation">
-          <img src="logo.png" alt="" />
-          <nav>
-            <a href="">Beranda</a>
-            <a href="">Tentang Kami</a>
-            <a href="">Produk</a>
-            <a href="">Galeri</a>
-            <a href="">Artikel</a>
-            <a href="">Testimoni</a>
-          </nav>
+        <div class="description">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+            provident distinctio odio sapiente voluptatum impedit repellendus
+            enim, libero eaque atque laborum quisquam adipisci itaque. Molestias
+            ullam nemo commodi accusantium recusandae suscipit fuga labore
+            reiciendis beatae consectetur assumenda optio facere esse animi
+            ipsum aliquid consequuntur, accusamus neque dicta ipsam, veritatis
+            vero?
+          </p>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+            eos expedita commodi, optio deserunt a beatae officia rerum placeat
+            error consequatur explicabo. Fuga, assumenda. Quis eaque vitae
+            possimus dolores officia!
+          </p>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+            eos expedita commodi, optio deserunt a beatae officia rerum placeat
+            error consequatur explicabo. Fuga, assumenda. Quis eaque vitae
+            possimus dolores officia!
+          </p>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus
+            eos expedita commodi, optio deserunt a beatae officia rerum placeat
+            error consequatur explicabo. Fuga, assumenda. Quis eaque vitae
+            possimus dolores officia!
+          </p>
+          <div class="buttons">
+            <button><a href="" class="item1">Check out my VC</a></button>
+            <button><a href="" class="item2">Some of my works</a></button>
+          </div>
         </div>
       </div>
     </div>
+    <main>
+      <p class="heading-title">What I Do</p>
+      <div class="main-content">
+        <div class="left-content">
+          <p>Design Leadership</p>
+          <ul>
+            <li>
+              Experience with leading design initiatives and aligning
+              users/customers needs with business KPIs
+            </li>
+            <li>
+              Experience in founding a research and innovation department,
+              establishing vision, processes, mentoring and managing talent
+              acquisition and onboarding.
+            </li>
+            <li>
+              Experienced in setting vision, strategy, and processes to advance
+              Design Maturity by promoting user-centric design across
+              cross-functional teams in both product- and business-led
+              organizations.
+            </li>
+            <li>
+              Fostering growth through teaching, knowledge sharing, and
+              mentoring in various settings
+            </li>
+          </ul>
+        </div>
+        <div class="right-content">
+          <p>Workshop facilitation and creative problem solving</p>
+          <ul>
+            <li>Design sprint mastery</li>
+            <li>Product discovery workshops</li>
+            <li>Innovation and Ideation sessions</li>
+          </ul>
+          <p>Strategic Design, UX Design and Research</p>
+          <ul>
+            <li>Product vision & UX strategy</li>
+            <li>
+              Ability to transform complex ideas into low and high fidelity
+              prototypes.
+            </li>
+            <li>Customer interviews & usability testing</li>
+            <li>Concept prototyping & UX wireframing</li>
+            <li>User Journey mapping</li>
+            <li>Human centric design trend analysis</li>
+            <li>
+              End to end product development (research, prototyping and
+              measuring impact)
+            </li>
+          </ul>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="footer-utama">
+        <div class="contact">
+          <p>
+            Contact me for <br />
+            collaboration and <br />
+            speaking <br />
+            engagement <br />
+            opportunities!
+          </p>
+        </div>
+        <div class="form">
+          <form action="">
+            <input class="item" placeholder="Nama" type="text" />
+            <input placeholder="Email" type="email" />
+            <input placeholder="Number" type="number" />
+            <textarea
+              placeholder="Type your message here..!"
+              name=""
+              id=""
+              rows="10"
+            ></textarea>
+            <input type="submit" />
+          </form>
+        </div>
+      </div>
+      <div class="footer-bawah">
+        <p>&#169;2025 by santrehNgoding</p>
+      </div>
+    </footer>
   </body>
 </html>
