--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
   <body>
     <header>
       <p>Yuliatin Ningsih</p>
-      <nav class="nav-links">
-        <a href="">Home</a>
-        <a href="">Experience & Education</a>
-        <a href="">Portfolio</a>
-        <a href="">Writing</a>
-        <a href="">Speaking</a>
-      </nav>
-      <div class="menu-toggle" id="menu-toggle">&#9776;</div>
+      <div class="nav-container">
+        <nav class="nav-links">
+          <a href="">Home</a>
+          <a href="">Experience & Education</a>
+          <a href="">Portfolio</a>
+          <a href="">Writing</a>
+          <a href="">Speaking</a>
+        </nav>
+        <div class="menu-toggle" id="menu-toggle">&#9776;</div>
+      </div>
     </header>
     <div class="hero-image">
       <div class="image">
