finish media query

--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
       <div class="footer-utama">
         <div class="contact">
           <p>
-            Contact me for <br />
-            collaboration and <br />
-            speaking <br />
-            engagement <br />
+            Contact me for <br class="desktop-br" />
+            collaboration and <br class="desktop-br" />
+            speaking <br class="desktop-br" />
+            engagement <br class="desktop-br" />
             opportunities!
           </p>
         </div>
